fixed naming mistakes

--- a/template/template.ipynb
+++ b/template/template.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A template for future assignments"
+    "# A template for future assignments"
    ]
   },
   {
@@ -22,6 +22,13 @@
     "import torchvision.datasets as datasets\n",
     "import yaml\n",
     "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Handling the data"
    ]
   },
   {
@@ -357,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualizing the model"
+    "### Visualizing the results"
    ]
   },
   {
