Added yaml template for the conda env and added some instructions to the template

--- a/template/template.ipynb
+++ b/template/template.ipynb
@@ -8,6 +8,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "connecting to VPN \n",
+    "```bash\n",
+    "ssh -L localhost:9999:localhost:9999 inf-id@cuda6.informatik.uni-bonn.de\n",
+    "```\n",
+    "launching jupyter lab\n",
+    "```bash\n",
+    "CUDA_VISIBLE_DEVICES=0 jupyter lab --no-browser --port=9999\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
