added seed init, added gradient visualization

--- a/Assignment1/assignment_1.ipynb
+++ b/Assignment1/assignment_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T11:28:20.679027100Z",
@@ -28,6 +28,36 @@
     "import yaml\n",
     "import os\n",
     "import pdb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# should be added into a utils file in the future\n",
+    "def set_seed():\n",
+    "    # Set a fixed random seed for reproducibility\n",
+    "\n",
+    "    # Set the random seed for PyTorch\n",
+    "    torch.manual_seed(9001)\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.backends.cudnn.benchmark = False\n",
+    "\n",
+    "    # If you are using CUDA, set the seed for CUDA as well\n",
+    "\n",
+    "    if torch.cuda.is_available():\n",
+    "        torch.cuda.manual_seed(9001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_seed()"
    ]
   },
   {
@@ -378,6 +408,11 @@
     "test_loss_list = []\n",
     "test_accuracy_list = []\n",
     "train_accuracy_list = []\n",
+    "# Initialize lists to store gradient information\n",
+    "gradients = []\n",
+    "gradient_norms = []\n",
+    "gradient_max_values = []\n",
+    "gradient_min_values = []\n",
     "best_loss = 100\n",
     "for epoch in range(NUM_EPOCHS):\n",
     "    progress_bar = tqdm(trainloader, total=len(trainloader))\n",
@@ -458,6 +493,18 @@
     "    \n",
     "        # updating parameters\n",
     "        optimizer.step()\n",
+    "\n",
+    "        '''In the following we calculate gradient information!'''\n",
+    "\n",
+    "        # Calculate gradient information\n",
+    "        for name, param in model.named_parameters():\n",
+    "            if name in ['layers.0.weight']:\n",
+    "                gradients.append(param.grad)\n",
+    "                gradient_norms.append(torch.norm(param.grad))\n",
+    "                gradient_max_values.append(param.grad.max().item())\n",
+    "                gradient_min_values.append(param.grad.min().item())\n",
+    "\n",
+    "        '''Stop calculating gradient inforamtion'''\n",
     "    \n",
     "        if(i % 10 == 0 or i == len(trainloader) - 1):\n",
     "            progress_bar.set_description(f\"Epoch {epoch + 1} Iter {i + 1}: loss {loss.item():.5f}. \")"
@@ -791,6 +838,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_gradients(norms, max_values, min_values):\n",
+    "    plt.style.use('seaborn')\n",
+    "    fig, ax = plt.subplots(1, 3)\n",
+    "    fig.set_size_inches(18, 5)\n",
+    "\n",
+    "    ax[0].plot(norms, c=\"blue\", label=\"Gradient Norms\", linewidth=3, alpha=0.5)\n",
+    "    ax[0].legend(loc=\"best\")\n",
+    "    ax[0].set_xlabel(\"Iteration\")\n",
+    "    ax[0].set_ylabel(\"Gradient Norms\")\n",
+    "    ax[0].set_title(\"Gradient Norms Change\")\n",
+    "\n",
+    "    ax[1].plot(max_values, c=\"red\", label=\"Max Gradient Values\", linewidth=3, alpha=0.5)\n",
+    "    ax[1].legend(loc=\"best\")\n",
+    "    ax[1].set_xlabel(\"Iteration\")\n",
+    "    ax[1].set_ylabel(\"Max Gradient Values\")\n",
+    "    ax[1].set_title(\"Max Gradient Values Change\")\n",
+    "\n",
+    "    ax[2].plot(min_values, c=\"green\", label=\"Min Gradient Values\", linewidth=3, alpha=0.5)\n",
+    "    ax[2].legend(loc=\"best\")\n",
+    "    ax[2].set_xlabel(\"Iteration\")\n",
+    "    ax[2].set_ylabel(\"Min Gradient Values\")\n",
+    "    ax[2].set_title(\"Min Gradient Values Change\")\n",
+    "\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
@@ -823,7 +902,8 @@
    ],
    "source": [
     "plot_loss()\n",
-    "plot_accuracy(train_accuracy_list, train_accuracy_list)"
+    "plot_accuracy(train_accuracy_list, train_accuracy_list)\n",
+    "plot_gradients(gradient_norms, gradient_max_values, gradient_min_values)"
    ]
   },
   {
