added some optuna changes -still visualization doesn't work

--- a/Assignment1/assignment_1.ipynb
+++ b/Assignment1/assignment_1.ipynb
@@ -924,16 +924,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_classes = 10\n",
-    "input_dim = 32*32*3 #CIFAR10 image dims"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -948,14 +938,16 @@
    "source": [
     "def define_model(trial):\n",
     "    # We optimize the number of layers, hidden units and dropout ratio in each layer.\n",
-    "    n_layers = trial.suggest_int(\"n_layers\", 1, 5)\n",
+    "    n_layers = trial.suggest_int(\"n_layers\", 0, 3)\n",
     "    layers = []\n",
+    "    num_classes = 10\n",
+    "    input_dim = 32*32*3 #CIFAR10 image dims\n",
     "    for i in range(n_layers):\n",
-    "        hidden_dim = trial.suggest_int(\"n_units_l{}\".format(i), 256, 1024)\n",
+    "        hidden_dim = trial.suggest_int(\"n_units_l{}\".format(i), 512, 1024)\n",
     "        layers.append(nn.Linear(input_dim, hidden_dim))\n",
     "        layers.append(nn.ReLU())\n",
-    "        p = trial.suggest_float(\"dropout_l{}\".format(i), 0.2, 0.5)\n",
-    "        layers.append(nn.Dropout(p))\n",
+    "       # p = trial.suggest_float(\"dropout_l{}\".format(i), 0.2, 0.5)\n",
+    "       # layers.append(nn.Dropout(p))\n",
     "        input_dim = hidden_dim\n",
     "    layers.append(nn.Linear(input_dim, num_classes))\n",
     "\n",
@@ -990,14 +982,15 @@
     "\n",
     "    # Generate the model.\n",
     "    model = define_model(trial).to(device)\n",
-    "\n",
-    "    #optimizing number of epochs\n",
-    "    num_epochs = trial.suggest_int(\"n_epochs\", 8, 14)\n",
     "    \n",
     "    model.train()\n",
-    "    for epoch in range(num_epochs):\n",
+    "\n",
+    "    for epoch in range(NUM_EPOCHS):\n",
     "        progress_bar = tqdm(trainloader, total=len(trainloader))\n",
     "        for i, (imgs, labels) in enumerate(progress_bar):\n",
+    "            # comment these 2 lines if device==\"cpu\"\n",
+    "            labels = labels.to(device)\n",
+    "            imgs = imgs.to(device)\n",
     "            # forward pass\n",
     "            flattened_imgs = imgs.flatten(start_dim=1)\n",
     "            preds = model(flattened_imgs)\n",
@@ -1033,13 +1026,14 @@
     "                n_correct = n_correct + cur_correct\n",
     "\n",
     "        accuracy = n_correct / len(test_dataset) * 100\n",
-    "\n",
+    "            \n",
     "        trial.report(accuracy, epoch)\n",
-    "\n",
+    "        \n",
+    "        # prune some trials that are doomed to save time\n",
     "        if trial.should_prune():\n",
     "            raise optuna.exceptions.TrialPruned()\n",
     "    \n",
-    "    return accuracy"
+    "    return accuracy #We could also maximize with respect to loss"
    ]
   },
   {
