--- a/Assignment1/assignment_1.ipynb
+++ b/Assignment1/assignment_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T11:28:20.679027100Z",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T11:28:20.804008400Z",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T11:28:20.804008400Z",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T11:28:22.569379300Z",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T11:28:22.584964400Z",
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T11:28:27.714358200Z",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T11:28:27.714358200Z",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T11:28:27.714358200Z",
@@ -399,7 +399,7 @@
     "    progress_bar = tqdm(trainloader, total=len(trainloader))\n",
     "    for i, (imgs, labels) in enumerate(progress_bar):\n",
     "\n",
-    "        '''\n",
+    "        \n",
     "        # Calculate test loss, accuracy for currently trained model\n",
     "        model.eval()\n",
     "        test_loss = 0.0\n",
@@ -429,7 +429,7 @@
     "            \n",
     "        test_loss_list.append(test_loss)\n",
     "        test_accuracy_list.append(accuracy)\n",
-    "        '''\n",
+    "        \n",
     "        # Turn model back to training mode\n",
     "        model.train()\n",
     "\n",
@@ -725,26 +725,6 @@
     "    smooth_f = np.convolve(f, kernel, mode=\"same\")\n",
     "    smooth_f = smooth_f[K//2: -K//2]  # removing boundary-fixes\n",
     "    return smooth_f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-26T11:34:26.838959700Z",
-     "start_time": "2023-10-26T11:34:26.823331600Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Note: CELL NEEDS TO BE DELETED\n",
-    "# Only because I do not have enough performance right now\n",
-    "test_loss_list = [x + 0.5 for x in train_loss_list]"
    ]
   },
   {
@@ -1724,6 +1704,308 @@
    "source": [
     "study.best_params"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bonus Task: MLP Mixer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class MLPBlock(nn.Module):\n",
+    "    '''\n",
+    "    Parameters:\n",
+    "         dim: int\n",
+    "         Input and Output dimension of the entire block\n",
+    "         hidden_dim: int\n",
+    "         hidden layer dimension\n",
+    "    '''\n",
+    "    def __init__(self, dim, hidden_dim):\n",
+    "        super().__init__()\n",
+    "        self.linear_1 = nn.Linear(dim, hidden_dim)\n",
+    "        self.activation = nn.GELU()\n",
+    "        self.linear_2 = nn.Linear(hidden_dim, dim)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        '''\n",
+    "\n",
+    "        :param x: torch.tensor\n",
+    "        Input tensor of shape (batch, n_channels, n_patches)\n",
+    "        :return: torch.tensor, which has the shape (batch, n_channels, n_patches)\n",
+    "        '''\n",
+    "        # print(x.shape)\n",
+    "        x = self.linear_1(x)\n",
+    "        x = self.activation(x)\n",
+    "        x = self.linear_2(x)\n",
+    "\n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "class MixerBlock(nn.Module):\n",
+    "    '''Parameters:\n",
+    "           n_patches : int\n",
+    "           hidden_dim: int\n",
+    "           This was the C value in the paper, the dimension which we project out patches to\n",
+    "           tokens_mlp_dim : int\n",
+    "           Hidden dimension for doing token-mixing\n",
+    "           channels_mlp_dim: int\n",
+    "           Hidden dimension for doing channel mixing\n",
+    "   '''\n",
+    "\n",
+    "\n",
+    "    def __init__(self, *, n_patches, hidden_dim, token_mlp_dim, channels_mlp_dim):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.norm_1 = nn.LayerNorm(hidden_dim)\n",
+    "        self.norm_2 = nn.LayerNorm(hidden_dim)\n",
+    "\n",
+    "        self.token_mlp_block = MLPBlock(n_patches, token_mlp_dim)\n",
+    "        self.channel_mlp_block = MLPBlock(hidden_dim, channels_mlp_dim)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        '''\n",
+    "        :param x: torch.Tensor\n",
+    "        It is of shape (batch_size, n_patches, hidden_dim)\n",
+    "        :return: torch. Tensor\n",
+    "        Shape: (batch_size, n_patches, hidden_dim)\n",
+    "        '''\n",
+    "        # Separate y, because we need x as a residual connection\n",
+    "        y = self.norm_1(x)  # (batch, n_patches, hidden_dim)\n",
+    "        # 3d pytorch inputs takes the last dim, i.e. the row, therefore we need to transpose\n",
+    "        y = y.permute(0, 2, 1)  # (batch_size, hidden_dim, n_patches)\n",
+    "        y = self.token_mlp_block(y)  # (batch_size, hidden_dim, n_patches)\n",
+    "        y = y.permute(0, 2, 1)  # (batch_size, n_patches, hidden_dim)\n",
+    "        x = x + y  # (batch_size, n_patches, hidden_dim)\n",
+    "        y = self.norm_2(x)\n",
+    "        res = x + self.channel_mlp_block(y)  # (n_samples, n_patches, hidden_dim)\n",
+    "\n",
+    "        return res\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "class MLPMixer(nn.Module):\n",
+    "    \"\"\"\n",
+    "    sticking all parts together\n",
+    "\n",
+    "    Parameters:\n",
+    "        image_size: int (We assume squares due to us focussing on CIFAR)\n",
+    "            Height and width of the input image\n",
+    "        patch_size: int\n",
+    "            Height and width of the square patches\n",
+    "        tokens_mlp_dim: int\n",
+    "            Hidden Dim for token mixer MLP\n",
+    "        channels_mlp_dim: int\n",
+    "            Hidden dim for MLPBlock when doing the channel mixing\n",
+    "        n_classes : int\n",
+    "            Number of classes for classification\n",
+    "        hidden_dim : int\n",
+    "            dim of patch embeddings\n",
+    "        n_blocks : int\n",
+    "            number of mixerblocks in the architecture\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, *, image_size, patch_size, tokens_mlp_dim, channels_mlp_dim, n_classes, hidden_dim, n_blocks):\n",
+    "        super().__init__()\n",
+    "        n_patches = (image_size // patch_size) ** 2  # assume divisibility\n",
+    "\n",
+    "        self.patch_embedder = nn.Conv2d(3, hidden_dim, kernel_size=patch_size, stride=patch_size)\n",
+    "\n",
+    "        self.blocks = nn.ModuleList([MixerBlock(\n",
+    "            n_patches=n_patches,\n",
+    "            hidden_dim = hidden_dim,\n",
+    "            token_mlp_dim=tokens_mlp_dim,\n",
+    "            channels_mlp_dim = channels_mlp_dim\n",
+    "        ) for _ in range(n_blocks)])\n",
+    "\n",
+    "        self.pre_head_norm = nn.LayerNorm(hidden_dim)\n",
+    "        self.head_classifier = nn.Linear(hidden_dim, n_classes)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        '''Parameters:\n",
+    "        x : torch. Tensor\n",
+    "            Input batch of square images of shape (batch_size, n_channels, image_size, images_size)\n",
+    "\n",
+    "        :returns torch. Tensor\n",
+    "            class logits of shape (n_samples, n_classes)\n",
+    "        '''\n",
+    "\n",
+    "        x = self.patch_embedder(x) # (batch_size, hidden_dim, n_patches**0.5, n_patches**0.5)\n",
+    "        x = einops.rearrange(x, \"n c h w -> n (h w) c\") # (batch, n_patches, hidden_dim)\n",
+    "\n",
+    "\n",
+    "        for mixer_block in self.blocks:\n",
+    "            x = mixer_block(x)  # (batch, n_patches, hidden_dim)\n",
+    "\n",
+    "\n",
+    "        x = self.pre_head_norm(x)  # (batch_size, n_patches, hidden_dim)\n",
+    "        x = x.mean(dim=1)  # (batch, hidden_dim)\n",
+    "        y = self.head_classifier(x)  # (batch, n_classes)\n",
+    "        return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model = MLPMixer(image_size=32, patch_size=4, tokens_mlp_dim=2048, channels_mlp_dim=256,\n",
+    "                    n_classes=10, hidden_dim = 512, n_blocks=8)\n",
+    "model = model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion = nn.CrossEntropyLoss()  # Note, that this already includes a Softmax!\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=LR)\n",
+    "\n",
+    "# needed for calculating the patches\n",
+    "import einops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1 Iter 782: loss 1.41887. : 100%|██████████| 782/782 [00:44<00:00, 17.65it/s]\n",
+      "Epoch 2 Iter 782: loss 1.47089. : 100%|██████████| 782/782 [00:44<00:00, 17.42it/s]\n",
+      "Epoch 3 Iter 782: loss 1.12344. : 100%|██████████| 782/782 [00:45<00:00, 17.22it/s]\n",
+      "Epoch 4 Iter 782: loss 0.75514. : 100%|██████████| 782/782 [00:45<00:00, 17.11it/s]\n",
+      "Epoch 5 Iter 782: loss 0.93481. : 100%|██████████| 782/782 [00:45<00:00, 17.03it/s]\n",
+      "Epoch 6 Iter 782: loss 0.73485. : 100%|██████████| 782/782 [00:46<00:00, 16.99it/s]\n",
+      "Epoch 7 Iter 782: loss 0.53589. : 100%|██████████| 782/782 [00:46<00:00, 16.98it/s]\n",
+      "Epoch 8 Iter 782: loss 0.64929. : 100%|██████████| 782/782 [00:46<00:00, 16.98it/s]\n",
+      "Epoch 9 Iter 782: loss 0.30312. : 100%|██████████| 782/782 [00:46<00:00, 16.97it/s]\n",
+      "Epoch 10 Iter 782: loss 0.19899. : 100%|██████████| 782/782 [00:46<00:00, 16.97it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_loss_list = []\n",
+    "train_accuracy_list = []\n",
+    "for epoch in range(NUM_EPOCHS):\n",
+    "    progress_bar = tqdm(trainloader, total=len(trainloader))\n",
+    "    for i, (imgs, labels) in enumerate(progress_bar):\n",
+    "\n",
+    "        # Turn model back to training mode\n",
+    "        model.train()\n",
+    "\n",
+    "        # using GPU\n",
+    "        imgs, labels = imgs.to(device), labels.to(device)\n",
+    "    \n",
+    "        # forward pass\n",
+    "        preds = model(imgs)\n",
+    "\n",
+    "        # calculate accuracy\n",
+    "        with torch.no_grad():\n",
+    "            predicted = preds.argmax(dim=-1)\n",
+    "            correct = (predicted == labels).sum().item()\n",
+    "            accuracy = correct/labels.shape[0]\n",
+    "\n",
+    "        train_accuracy_list.append(accuracy)\n",
+    "\n",
+    "        # computing error\n",
+    "        loss = criterion(preds, labels)\n",
+    "        train_loss_list.append(loss.item())\n",
+    "\n",
+    "\n",
+    "        # removing accumulated gradients\n",
+    "        optimizer.zero_grad()\n",
+    "    \n",
+    "        # backprogating error to compute gradients\n",
+    "        loss.backward()\n",
+    "    \n",
+    "        # updating parameters\n",
+    "        optimizer.step()\n",
+    "\n",
+    "    \n",
+    "        if(i % 10 == 0 or i == len(trainloader) - 1):\n",
+    "            progress_bar.set_description(f\"Epoch {epoch + 1} Iter {i + 1}: loss {loss.item():.5f}. \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 157/157 [00:03<00:00, 40.73it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 64.19%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_correct = 0\n",
+    "with torch.no_grad():\n",
+    "    progress_bar = tqdm(enumerate(testloader), total=len(testloader))\n",
+    "    for i, (imgs, labels) in progress_bar:\n",
+    "        #everything needs to be on the same device\n",
+    "        imgs = imgs.to(device)\n",
+    "        labels = labels.to(device)\n",
+    "\n",
+    "        # forward pass\n",
+    "        preds = model(imgs)\n",
+    "\n",
+    "        pred_labels = torch.argmax(preds, dim=-1)\n",
+    "        cur_correct = len(torch.where(pred_labels == labels)[0])\n",
+    "        n_correct = n_correct + cur_correct\n",
+    "\n",
+    "\n",
+    "accuracy = n_correct / len(test_dataset) * 100\n",
+    "print(f\"Test accuracy: {round(accuracy,2)}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluation: MLP Mixer\n",
+    "\n",
+    "Due to time constraints, we will unfortunately not be able to optimize our hyperparameters further. The ones we used were taken straight from the paper. Due to time constraints we are also not able to pre-train our model.\n",
+    "\n",
+    "The MLP Mixer achieved an accuracy of 64.19% on the test set, which was better than the accuracy achieved on the MLP, even after hyperparameter optimization. A reason for this could be the better designed network. It could for instance be possible that, due to the splitting of the images into patches and then connecting the individual patches with each other, we make more use of the spatial information given to us by the data. In addition, we used some simple but more modern techniques like residual connections, which facilitate training of neural networks.\n",
+    "\n",
+    "Nevertheless, we do not consider this a complete sucess. We believe, that with sufficient pre-training and hyperparameter optimization higher accuracies can be achieved."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -1742,7 +2024,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
