added confusion matrix documentation

--- a/Assignment1/assignment_1.ipynb
+++ b/Assignment1/assignment_1.ipynb
@@ -692,6 +692,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Confusion Matrix\n",
+    "\n",
+    "Above we can see the confusion matrix. First of all we can observe, that the entries of the confusion matrix reflect the relatively low accuracy of the model. We have a large amount of misclassifications. \n",
+    "\n",
+    "Looking closer, we can detect that some labes appear to be harder to detect than others. A frog seems to be easy to classify. This is expected. Comparing a frog to other labels in our dataset, we detect striking differences (color, form of legs, etc.), which makes us differenciate frog images from other animal images. In constrast, a dog is much harder to classify, due to its similarities with deer or cats (color, number of legs). Therefore a dog also seems harder to classficy. Finally, we observe that a cat appears to be the hardest label to classify. Using a similar argumentation as above, this is expected as well. In general, non living objects seemed to be easier to classify than living animals. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
