--- a/Assignment1/assignment_1.ipynb
+++ b/Assignment1/assignment_1.ipynb
@@ -901,9 +901,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The plots displaying the training and testing progress displays expected results. The testing loss and testing accuracy are marginally higher than the training loss and accuracy. We can extrapolate from that, that our model does not overfit particularly strongly. This is also expected however, when taking into account our achieved accuracy. \n",
+    "The plots displaying the training and testing progress display expected results. The testing loss and testing accuracy are marginally higher than the training loss and accuracy. We can extrapolate from that, that our model does not overfit particularly strongly. This is also expected however, when taking into account our achieved accuracy. \n",
     "\n",
-    "During training we observe a slight increase in gradient magnitude of the bias gradients, which are part of the first layer. This is generally unintuitive, because one would expect gradient magnitude to decrease when approaching a local optimum.  A reason for this phenomenon occuring could be due to our adaptive optimization algorithm (Adam) that momentarily adjusts our learning rates."
+    "During training we observe a slight increase in gradient magnitude of the bias gradients, which are part of the first layer. This is generally unintuitive, because one would expect gradient magnitude to decrease when approaching a local optimum.  A reason for this phenomenon occuring could be our adaptive optimization algorithm (Adam) that momentarily adjusts our learning rates."
    ]
   },
   {
