integrated convmixer but still working on it

--- a/Assignment2/convmixer.ipynb
+++ b/Assignment2/convmixer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "device(type='cuda')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,14 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "criterion = nn.CrossEntropyLoss()  # Note, that this already includes a Softmax!\n",
     "optimizer = torch.optim.AdamW(model.parameters(), lr=LR) #adamW was used in the paper\n",
-    "# scheduler = torch.optim.lr_scheduler.CyclicLR(optimizer=optimizer, \n",
-    "#         base_lr=0.0001, max_lr = LR+0.0003, cycle_momentum=False)"
+    "scheduler = torch.optim.lr_scheduler.CyclicLR(optimizer=optimizer,  #they also used triangular scheduler\n",
+    "        base_lr=0.0001, max_lr = LR, cycle_momentum=False)"
    ]
   },
   {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
     "            lr = (step / (self.pct_warmup * self.total_steps)) * self.max_lr\n",
     "        else:\n",
     "            lr = self.max_lr - ((step - self.pct_warmup * self.total_steps) / ((1 - self.pct_warmup) * self.total_steps)) * self.max_lr\n",
-    "        return [lr for _ in self.base_lrs]\n",
+    "        return [lr]\n",
     "    \n",
     "    def step(self, epoch=None):\n",
     "        if epoch is None:\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,36 +341,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1 Iter 782 Learning rate 0.0: loss 1.30710. : 100%|██████████| 782/782 [01:06<00:00, 11.71it/s]                   \n"
+      "  0%|          | 0/782 [00:00<?, ?it/s]c:\\Users\\fryde\\miniconda3\\envs\\cuda\\Lib\\site-packages\\torch\\nn\\modules\\conv.py:456: UserWarning: Using padding='same' with even kernel lengths and odd dilation may require a zero-padded copy of the input be created (Triggered internally at C:\\cb\\pytorch_1000000000000\\work\\aten\\src\\ATen\\native\\Convolution.cpp:1009.)\n",
+      "  return F.conv2d(input, weight, bias, self.stride,\n",
+      "Epoch 1 Iter 782 Learning rate 0.0: loss 0.98876. : 100%|██████████| 782/782 [01:12<00:00, 10.78it/s]                   \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Val accuracy at epoch 0: 58.12%\n"
+      "Val accuracy at epoch 0: 58.96%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 2 Iter 133 Learning rate -7.289002557544756e-05: loss 5.96969. :  17%|█▋        | 132/782 [00:11<00:55, 11.64it/s] "
+      "Epoch 2 Iter 41 Learning rate -2.2469857508220685e-05: loss 1.26282. :   5%|▌         | 41/782 [00:03<01:05, 11.37it/s]\n"
      ]
     },
     {
-     "ename": "",
+     "ename": "KeyboardInterrupt",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\fryde\\Documents\\projects\\CudaVisionWS23\\Assignment2\\convmixer.ipynb Cell 20\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment2/convmixer.ipynb#X25sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m     lrs \u001b[39m=\u001b[39m []\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment2/convmixer.ipynb#X25sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m     lrs\u001b[39m.\u001b[39mappend(scheduler\u001b[39m.\u001b[39mget_lr()[\u001b[39m0\u001b[39m])\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment2/convmixer.ipynb#X25sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     progress_bar\u001b[39m.\u001b[39mset_description(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mEpoch \u001b[39m\u001b[39m{\u001b[39;00mepoch\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m Iter \u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m Learning rate \u001b[39m\u001b[39m{\u001b[39;00mget_lr_show()\u001b[39m}\u001b[39;00m\u001b[39m: loss \u001b[39m\u001b[39m{\u001b[39;00mloss\u001b[39m.\u001b[39;49mitem()\u001b[39m:\u001b[39;00m\u001b[39m.5f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m. \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment2/convmixer.ipynb#X25sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m loss_hist\u001b[39m.\u001b[39mappend(np\u001b[39m.\u001b[39mmean(loss_list))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment2/convmixer.ipynb#X25sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m stats[\u001b[39m\"\u001b[39m\u001b[39mepoch\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mappend(epoch)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -506,22 +511,6 @@
     "ax[1].set_yscale(\"log\")\n",
     "\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def custom_learning_rate_scheduler(optimizer, epoch, warmup_epochs=5, max_epochs=50, initial_lr=0.001):\n",
-    "    if epoch < warmup_epochs:\n",
-    "        lr = initial_lr * (epoch / warmup_epochs)\n",
-    "    else:\n",
-    "        lr = initial_lr * (1.0 - (epoch - warmup_epochs) / (max_epochs - warmup_epochs))\n",
-    "    \n",
-    "    for param_group in optimizer.param_groups:\n",
-    "        param_group['lr'] = lr"
    ]
   }
  ],
