--- a/Assignment2/assignment_2_luke.ipynb
+++ b/Assignment2/assignment_2_luke.ipynb
@@ -3150,9 +3150,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluation LearningRateScheduler + Warmup\n",
+    "# Evaluation Learning Rate Scheduler + Warmup\n",
     "\n",
-    "The learning rate scheduler achieved very good results. Without droput we observer an increase an accuracy. Looking at the plots we also observe a decrease in overfitting and a decrease in overconfidence."
+    "The learning rate scheduler achieved very good results. Without dropout we detect an increase of around 3% in accuracy, compared to our original optimized CNN model. Looking at the plots we also observe a decrease in overfitting and a decrease in overconfidence."
    ]
   },
   {
