--- a/Assignment2/assignment_2.ipynb
+++ b/Assignment2/assignment_2.ipynb
@@ -2082,6 +2082,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Comment about above feature maps\n",
+    "First, second and third image depitcs an output depitcs a feature map from first, second and third convolutional layer respectively. Feature map closer to the input captures a lot of fine detail in the image. Second and third map show less and less detail. This behaviour is expected because the model abstracts the features from the image into more general concepts that can be used to make classification. In the above example, first image contains features like edges and framing of a boat. In the next feature maps these elements are lost to more general concepts that help the model make a classification. Third and last feature map displays, at least from what we can assume, an abstract area of classification (of a boat). It is also worth mentioning that we generally lose the ability to interpret these deeper feature maps as we progress further into the model. \\\n",
+    "These feature maps look better when models like VGG16 are analised due to their big number of convolutional layers. Then, the generalisation of features is more visible."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Dropout"
    ]
   },
@@ -3163,6 +3172,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On top of implementing the ConvMixer model, we also tried to recreate the same training conditions i.e. same optimizer, gradient clipping, random augmentation and erasing of the training data etc. One thing we did different is applying OneCycleLR scheduler with cosine anneal strategy instead of triangular scheduler as it was described in the paper. The reason is simple. Triangular scheduler gave us pretty peculiar results, where val loss/val acc plots jumped up and down continously (It is pretty explainable given the nature of a TRIANGULAR scheduler). Of course the reason of its failure may lie with us, but using OneCycleLR scheduler was so unproblematic and yielded very nice results, we discarded triangular scheduler."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -3625,25 +3641,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Conclusion:\n",
+    "Convmixer model achieves higher accuracy (~85%) than CNN model, which had just under 80% acc with dropout. It is not unexpected, because ConvMixer model is using patches as the input representation and that has been proven to be an effective method, which is also one of the reasons why Visual Transformers (ViT) are as powerful as they are."
+   ]
   }
  ],
  "metadata": {
@@ -3662,7 +3665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
