--- a/Assignment3/assignment_3_convnext_swin.ipynb
+++ b/Assignment3/assignment_3_convnext_swin.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mfreddie7\u001b[0m (\u001b[33mintro2nlp-rudeness-determinator\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mfreddie7\u001b[0m (\u001b[33mluke_team\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
      ]
     }
    ],
@@ -40,11 +40,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "utils.set_random_seeds()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.use_deterministic_algorithms(False)"
    ]
   },
   {
@@ -100,6 +109,23 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create dataloaders\n",
+    "trainloader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size,\n",
+    "                                          shuffle=True, num_workers=2)\n",
+    "# Create separate trainloader for the mixup training\n",
+    "trainloader_mixup = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size,\n",
+    "                                          shuffle=True, num_workers=2)\n",
+    "\n",
+    "testloader = torch.utils.data.DataLoader(val_dataset, batch_size=batch_size,\n",
+    "                                         shuffle=True, num_workers=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -132,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,17 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dupa\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def train_model(model, optimizer, criterion, train_loader, valid_loader, num_epochs, scheduler=None, start_epoch=0):\n",
     "    \"\"\" \n",
@@ -192,36 +210,41 @@
     "    - list: List of individual training losses for each batch.\n",
     "    - list: List of validation accuracies for each epoch.\n",
     "    \"\"\"\n",
-    "    wandb.watch(model, criterion, log='gradients', log_freq=100)\n",
+    "   # wandb.watch(model, criterion, log='gradients', log_freq=100)\n",
     "\n",
     "    train_loss = []\n",
     "    val_loss =  []\n",
     "    loss_iters = []\n",
     "    valid_acc = []\n",
-    "    \n",
+    "    train_acc = []\n",
     "    for epoch in tqdm(range(num_epochs)):\n",
     "           \n",
+    "        \n",
+    "        # training epoch\n",
+    "        model.train()  # important for dropout and batch norms\n",
+    "        mean_loss, _, mean_acc = utils.train_epoch(\n",
+    "                model=model, train_loader=train_loader, optimizer=optimizer,\n",
+    "                criterion=criterion, device=device\n",
+    "            )\n",
+    "        if scheduler is not None:\n",
+    "            scheduler.step()\n",
+    "        train_loss.append(mean_loss)\n",
+    "        train_acc.append(mean_acc)\n",
+    "\n",
+    "        \n",
+    "        #loss_iters = loss_iters + cur_loss_iters\n",
+    "        \n",
     "        # validation epoch\n",
     "        model.eval()  # important for dropout and batch norms\n",
     "        accuracy, loss = utils.eval_model(\n",
     "                    model=model, eval_loader=valid_loader,\n",
     "                    criterion=criterion, device=device\n",
     "            )\n",
+    "       \n",
+    "       # wandb.log({'epoch': epoch, 'loss': loss, 'accuracy': accuracy}, step=epoch)\n",
+    "        \n",
     "        valid_acc.append(accuracy)\n",
     "        val_loss.append(loss)\n",
-    "        \n",
-    "        # training epoch\n",
-    "        model.train()  # important for dropout and batch norms\n",
-    "        mean_loss, cur_loss_iters = utils.train_epoch(\n",
-    "                model=model, train_loader=train_loader, optimizer=optimizer,\n",
-    "                criterion=criterion, epoch=epoch, device=device\n",
-    "            )\n",
-    "        if scheduler is not None:\n",
-    "            scheduler.step()\n",
-    "        train_loss.append(mean_loss)\n",
-    "        wandb.log({'epoch': epoch, 'loss': loss, 'accuracy': accuracy}, step=epoch)\n",
-    "\n",
-    "        loss_iters = loss_iters + cur_loss_iters\n",
     "        \n",
     "        if(epoch % 5 == 0 or epoch==num_epochs-1):\n",
     "            print(f\"Epoch {epoch+1}/{num_epochs}\")\n",
@@ -231,7 +254,109 @@
     "            print(\"\\n\")\n",
     "    \n",
     "    print(f\"Training completed\")\n",
-    "    return train_loss, val_loss, loss_iters, valid_acc"
+    "    return train_loss, val_loss, loss_iters, valid_acc, train_acc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convnext - Combined approach"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convnext = torchvision.models.convnext_base(weights='DEFAULT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Freezing model parameters\n",
+    "for param in convnext.parameters():\n",
+    "    param.requires_grad = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameters of newly constructed modules have requires_grad=True by default\n",
+    "convnext.classifier[2] = nn.Linear(convnext.classifier[2].in_features, 196)\n",
+    "# )\n",
+    "# convnext.fc = nn.Sequential(\n",
+    "#     nn.linear(num_logits, 784),\n",
+    "#     nn.Linear(796, 196))\n",
+    "convnext = convnext.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LR = float(config[\"LR\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# classification loss function\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "\n",
+    "# Observe that all parameters are being optimized\n",
+    "optimizer = torch.optim.AdamW(convnext.parameters(), lr=LR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/10 [00:20<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute '_log'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\fryde\\Documents\\projects\\CudaVisionWS23\\Assignment3\\assignment_3_convnext_swin.ipynb Cell 18\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment3/assignment_3_convnext_swin.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m train_loss, val_loss, _ , valid_acc, train_acc \u001b[39m=\u001b[39m train_model(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment3/assignment_3_convnext_swin.ipynb#X23sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m         model\u001b[39m=\u001b[39;49mconvnext, optimizer\u001b[39m=\u001b[39;49moptimizer, criterion\u001b[39m=\u001b[39;49mcriterion,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment3/assignment_3_convnext_swin.ipynb#X23sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m         train_loader\u001b[39m=\u001b[39;49mtrainloader, valid_loader\u001b[39m=\u001b[39;49mtestloader, num_epochs\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m, start_epoch\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment3/assignment_3_convnext_swin.ipynb#X23sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     )\n",
+      "\u001b[1;32mc:\\Users\\fryde\\Documents\\projects\\CudaVisionWS23\\Assignment3\\assignment_3_convnext_swin.ipynb Cell 18\u001b[0m line \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment3/assignment_3_convnext_swin.ipynb#X23sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m tqdm(\u001b[39mrange\u001b[39m(num_epochs)):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment3/assignment_3_convnext_swin.ipynb#X23sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m        \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment3/assignment_3_convnext_swin.ipynb#X23sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m     \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment3/assignment_3_convnext_swin.ipynb#X23sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m     \u001b[39m# training epoch\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment3/assignment_3_convnext_swin.ipynb#X23sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m     model\u001b[39m.\u001b[39mtrain()  \u001b[39m# important for dropout and batch norms\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment3/assignment_3_convnext_swin.ipynb#X23sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m     mean_loss, _, mean_acc \u001b[39m=\u001b[39m utils\u001b[39m.\u001b[39;49mtrain_epoch(\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment3/assignment_3_convnext_swin.ipynb#X23sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m             model\u001b[39m=\u001b[39;49mmodel, train_loader\u001b[39m=\u001b[39;49mtrain_loader, optimizer\u001b[39m=\u001b[39;49moptimizer,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment3/assignment_3_convnext_swin.ipynb#X23sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m             criterion\u001b[39m=\u001b[39;49mcriterion, device\u001b[39m=\u001b[39;49mdevice\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment3/assignment_3_convnext_swin.ipynb#X23sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m         )\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment3/assignment_3_convnext_swin.ipynb#X23sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m     \u001b[39mif\u001b[39;00m scheduler \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/fryde/Documents/projects/CudaVisionWS23/Assignment3/assignment_3_convnext_swin.ipynb#X23sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m         scheduler\u001b[39m.\u001b[39mstep()\n",
+      "File \u001b[1;32mc:\\Users\\fryde\\Documents\\projects\\CudaVisionWS23\\Assignment3\\..\\template\\utils.py:287\u001b[0m, in \u001b[0;36mtrain_epoch\u001b[1;34m(model, train_loader, optimizer, criterion, device, mixup)\u001b[0m\n\u001b[0;32m    284\u001b[0m loss_list\u001b[39m.\u001b[39mappend(loss\u001b[39m.\u001b[39mitem())\n\u001b[0;32m    286\u001b[0m \u001b[39m# Getting gradients w.r.t. parameters\u001b[39;00m\n\u001b[1;32m--> 287\u001b[0m loss\u001b[39m.\u001b[39;49mbackward()\n\u001b[0;32m    289\u001b[0m \u001b[39m# Updating parameters\u001b[39;00m\n\u001b[0;32m    290\u001b[0m optimizer\u001b[39m.\u001b[39mstep()\n",
+      "File \u001b[1;32mc:\\Users\\fryde\\miniconda3\\envs\\cuda\\Lib\\site-packages\\torch\\_tensor.py:492\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    482\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[0;32m    483\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    484\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[0;32m    485\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    490\u001b[0m         inputs\u001b[39m=\u001b[39minputs,\n\u001b[0;32m    491\u001b[0m     )\n\u001b[1;32m--> 492\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\n\u001b[0;32m    493\u001b[0m     \u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs\n\u001b[0;32m    494\u001b[0m )\n",
+      "File \u001b[1;32mc:\\Users\\fryde\\miniconda3\\envs\\cuda\\Lib\\site-packages\\torch\\autograd\\__init__.py:251\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    246\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[0;32m    248\u001b[0m \u001b[39m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[0;32m    249\u001b[0m \u001b[39m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[0;32m    250\u001b[0m \u001b[39m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[1;32m--> 251\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(  \u001b[39m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[0;32m    252\u001b[0m     tensors,\n\u001b[0;32m    253\u001b[0m     grad_tensors_,\n\u001b[0;32m    254\u001b[0m     retain_graph,\n\u001b[0;32m    255\u001b[0m     create_graph,\n\u001b[0;32m    256\u001b[0m     inputs,\n\u001b[0;32m    257\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m,\n\u001b[0;32m    258\u001b[0m     accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m,\n\u001b[0;32m    259\u001b[0m )\n",
+      "File \u001b[1;32mc:\\Users\\fryde\\miniconda3\\envs\\cuda\\Lib\\site-packages\\wandb\\wandb_torch.py:266\u001b[0m, in \u001b[0;36mTorchHistory._hook_variable_gradient_stats.<locals>.<lambda>\u001b[1;34m(grad)\u001b[0m\n\u001b[0;32m    263\u001b[0m         \u001b[39mreturn\u001b[39;00m\n\u001b[0;32m    264\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlog_tensor_stats(grad\u001b[39m.\u001b[39mdata, name)\n\u001b[1;32m--> 266\u001b[0m handle \u001b[39m=\u001b[39m var\u001b[39m.\u001b[39mregister_hook(\u001b[39mlambda\u001b[39;00m grad: _callback(grad, log_track))\n\u001b[0;32m    267\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_hook_handles[name] \u001b[39m=\u001b[39m handle\n\u001b[0;32m    268\u001b[0m \u001b[39mreturn\u001b[39;00m handle\n",
+      "File \u001b[1;32mc:\\Users\\fryde\\miniconda3\\envs\\cuda\\Lib\\site-packages\\wandb\\wandb_torch.py:264\u001b[0m, in \u001b[0;36mTorchHistory._hook_variable_gradient_stats.<locals>._callback\u001b[1;34m(grad, log_track)\u001b[0m\n\u001b[0;32m    262\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m log_track_update(log_track):\n\u001b[0;32m    263\u001b[0m     \u001b[39mreturn\u001b[39;00m\n\u001b[1;32m--> 264\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mlog_tensor_stats(grad\u001b[39m.\u001b[39;49mdata, name)\n",
+      "File \u001b[1;32mc:\\Users\\fryde\\miniconda3\\envs\\cuda\\Lib\\site-packages\\wandb\\wandb_torch.py:242\u001b[0m, in \u001b[0;36mTorchHistory.log_tensor_stats\u001b[1;34m(self, tensor, name)\u001b[0m\n\u001b[0;32m    239\u001b[0m     tensor \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mTensor(tensor_np)\n\u001b[0;32m    240\u001b[0m     bins \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mTensor(bins_np)\n\u001b[1;32m--> 242\u001b[0m wandb\u001b[39m.\u001b[39;49mrun\u001b[39m.\u001b[39;49m_log(\n\u001b[0;32m    243\u001b[0m     {name: wandb\u001b[39m.\u001b[39mHistogram(np_histogram\u001b[39m=\u001b[39m(tensor\u001b[39m.\u001b[39mtolist(), bins\u001b[39m.\u001b[39mtolist()))},\n\u001b[0;32m    244\u001b[0m     commit\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m,\n\u001b[0;32m    245\u001b[0m )\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute '_log'"
+     ]
+    }
+   ],
+   "source": [
+    "train_loss, val_loss, _ , valid_acc, train_acc = train_model(\n",
+    "        model=convnext, optimizer=optimizer, criterion=criterion,\n",
+    "        train_loader=trainloader, valid_loader=testloader, num_epochs=10, start_epoch=0\n",
+    "    )"
    ]
   },
   {
@@ -239,7 +364,57 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Unfreezing model parameters\n",
+    "for param in convnext.parameters():\n",
+    "    param.requires_grad = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lowering learning rate\n",
+    "for g in optimizer.param_groups:\n",
+    "    g['lr'] *= 0.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with wandb.init(project='finetuning_convnext_combined'):\n",
+    "    next_train_loss, next_val_loss, _ , next_valid_acc, next_train_acc = train_model(\n",
+    "            model=convnext, optimizer=optimizer, criterion=criterion,\n",
+    "            train_loader=trainloader, valid_loader=testloader, num_epochs=10, start_epoch=0\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "concat_train_loss = train_loss + next_train_loss\n",
+    "concat_val_loss = val_loss + next_val_loss\n",
+    "concat_train_acc = train_acc + next_train_acc\n",
+    "concat_valid_acc = valid_acc + next_valid_acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.plot_accuracy_epoch(concat_valid_acc, concat_train_acc)\n",
+    "utils.plot_loss_epoch(concat_train_loss, concat_val_loss)"
+   ]
   }
  ],
  "metadata": {
