added small stuff

--- a/Assignment3/assignment_3_convnext_swin.ipynb
+++ b/Assignment3/assignment_3_convnext_swin.ipynb
@@ -4162,7 +4162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The training and test loss look as expected given our earlier observations. A more detailed discussion of our choices of hyperparameters and results can be found above."
+    "The training and test loss look as expected given our earlier observations. We were eventually able to increase our best accuracy from before from 87% to 91.7%. Those results are very good. A more detailed discussion of our choices of hyperparameters and results can be found above."
    ]
   }
  ],
