--- a/Assignment4/Lab_Recurrent_4.ipynb
+++ b/Assignment4/Lab_Recurrent_4.ipynb
@@ -49,7 +49,6 @@
     "# Define the subjects for each split\n",
     "# In the past, there existed validation and test subjects, but the method changed a bit\n",
     "train_subjects = [11, 12, 13, 14, 15, 16, 21, 23, 3 ,5 ] #3, 6, 7, 1, 2, 4, 8]\n",
-    "\n",
     "# Define the background variations\n",
     "background_variations = ['d1','d2', 'd3', 'd4']\n",
     "\n",
@@ -108,6 +107,16 @@
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc4c344b-b69d-4678-bc3a-81d25bc3a7a8",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Data preprocessing"
    ]
   },
   {
@@ -274,6 +283,17 @@
    ],
    "source": [
     "len(train_sequences)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e6026a0-60e7-474d-ab5e-ccb5b92debdf",
+   "metadata": {},
+   "source": [
+    "### A comment about data preprocessing\n",
+    "It could be argued that data preprocessing was one of the hardest parts of this assignment. The class above handles all of the data preprocessing for DL models. Because LSTM networks didn't want to learn (as it will be shown later), the suspition was that something was wrong with initial data handling. After long and throughout investigation, we reached the conclusion that nothing is wrong with data processing. However, there's a somewhat significant problem with data itself. In \"Jogging\", \"Running\" and \"Walking\" categories, it often captures sequences of empty frames i.e. without a persor performing an action. It happens because, a person eventually runs/walks/jogs out of camera view, but frames are still getting captured. The direct consequence of that is that it may be indistinguishable for the model(s) to recognize what category it, in fact, is. Thus, the final loss has a higher value, when we include sequences from 3 mentioned classes. <br/>\n",
+    "One method of fighting that would be measuring l2 cost between one frame and the next one, and deleting it if the cost is lower that a given threshold. We believe that would work well. We also tried a different method, where we measured change of l2 cost of ALL 20 frames in the sequence. It didn't work very well, because even if 17 frames in a sequence are similar, the last 3 which differ from them, could make l2 cost skyrocket, thus making the sequence acceptable. <br/>\n",
+    "In the end, we did not include this additional \"l2 cost\" preprocessing, simply because it wasn't the root of our problems with LSTM networks. It would make the data cleaner, that's for sure. \n"
    ]
   },
   {
@@ -458,20 +478,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "9478965c-f0de-45e0-afd5-cc43f819cf2e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# train_dataset = KTHDataset(train_sequences, train_target_arr)\n",
-    "# test_dataset = KTHDataset(test_sequences, test_target_arr)\n",
-    "# val_dataset = KTHDataset(val_sequences, val_target_arr)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "id": "641f7753-a710-4a5a-8167-15f91e1bab91",
    "metadata": {
@@ -479,12 +485,8 @@
    },
    "outputs": [],
    "source": [
-    "# train_dataloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=False)\n",
-    "# test_dataloader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
-    "# val_dataloader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
     "train_dataloader = create_dataloaders(train_sequences,train_target_arr, batch_size=batch_size, shuffle=True)\n",
-    "val_dataloader = create_dataloaders(val_sequences,val_target_arr, batch_size=batch_size, shuffle=True)\n",
-    "#test_dataloader = create_dataloaders(test_sequences,test_target_arr, batch_size=batch_size, shuffle=True)"
+    "val_dataloader = create_dataloaders(val_sequences,val_target_arr, batch_size=batch_size, shuffle=True)"
    ]
   },
   {
@@ -2233,6 +2235,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fca826b7-2c73-4ae9-89a5-d21acadc8694",
+   "metadata": {},
+   "source": [
+    "### LSTMS - The discussion\n",
+    "Unfortunately, training recurrent networks with GRU Cells or LSTM Cells was unsuccesful. We tried many different methods, but in the end none were fixing the issues with models incapability to learn. Here are (some) methods, which we tried:\n",
+    " - different hidden layer sizes\n",
+    " - changing number of LSTM layers\n",
+    " - changing the number of convolutional encoder layers\n",
+    " - tested if it works on the classic nn.LSTM (it doesn't)\n",
+    " - tinkered with hyperparameters, optimizers, schedulers etc.\n",
+    " - tried out different shapes of input matrix to the LSTM network\n",
+    " - Investigated data/data preprocessing (*)\n",
+    " \n",
+    "After trying to find a hipothetical bug using these methods, we reached the conclusion, that LSTMs/GRUs are at fault. Maybe it's just hard to train them. What supports our hipothesis, is that ConvLSTM and Resnet3D are learning and achieving satisfying results.\n",
+    " \n",
+    "(*) - from our collective experience, if models behaves like that (as if the accuracy/loss gets stuck at a given number and doesn't change at all), it usually is the fault of the data. We spent a lot of time ensuring that the data is in fact correct, besides from the issue described in discussion about the data preprocessing."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "id": "5491922d-e7f7-40ad-bdbd-b187fc186e6b",
@@ -3117,9 +3139,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a449fa7c-b740-421c-8552-0a438897760b",
+   "metadata": {},
+   "source": [
+    "### Comment\n",
+    "Resnet achieves satisfactory results, it gets about ~80% accuracy depending on a run. It is worth mentioning that the model gains around 10% accuracy if we exclude \"walking\", \"jogging\" and \"running\" for a known reason. We also tested the model with incresed number of parameters, but that didn't change anything. It turnes out that ConvLSTM is the best performing model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86a7040d-1df2-4e0f-a6f8-d15175a5c057",
+   "id": "2f48701d-edec-4640-9d1a-7c4d540ba8b8",
    "metadata": {},
    "outputs": [],
    "source": []
