addedConvLSTM and Our LSTM doc

--- a/Assignment4/Lab_Recurrent_4.ipynb
+++ b/Assignment4/Lab_Recurrent_4.ipynb
@@ -524,7 +524,7 @@
     "        super(OurLSTMCell, self).__init__()\n",
     "        self.input_size = input_size\n",
     "        self.hidden_size = hidden_size\n",
-    "\n",
+    "        # We note, that we transpose later\n",
     "        # Input gate\n",
     "        self.W_ii = nn.Parameter(torch.Tensor(hidden_size, input_size))\n",
     "        self.W_hi = nn.Parameter(torch.Tensor(hidden_size, hidden_size))\n",
@@ -597,6 +597,14 @@
    "metadata": {},
    "source": [
     "## ConvLSTM cell"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a32b7b9d",
+   "metadata": {},
+   "source": [
+    "We adhered strictly to the paper. The only thing we changed was the additional usage of Hadamard products, in order to stay closer to our original LSTM. This appears to be a popular choice with many applications. "
    ]
   },
   {
@@ -867,7 +875,7 @@
    "id": "e09c112d",
    "metadata": {},
    "source": [
-    "We updated the Conv Block to support padding, in order to maintain a larger image size. A larger image size was needed to ensure that a usage of the ConvLSTM was sensible."
+    "We updated the Conv Block to support padding, in order to maintain larger image size with multiple convolutional layers. Additionally we dropped some convolutional layers with padding. A larger dimension of the input image was needed to ensure that a usage of the ConvLSTM was sensible."
    ]
   },
   {
@@ -1525,6 +1533,14 @@
    "source": [
     "utils.plot_loss_epoch(train_loss_hist, val_loss_hist)\n",
     "utils.plot_accuracy_epoch(val_acc_hist, train_acc_hist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c55017d9",
+   "metadata": {},
+   "source": [
+    "For our self-implemented LSTM we observe very similar behavior as above. This is expected considering it is the same neural network building block. Small changes might be attributed to the different initializations of the inner weights. The experiment documentation above applies to our own lstm as well."
    ]
   },
   {
@@ -2585,6 +2601,14 @@
    "source": [
     "utils.plot_loss_epoch(train_loss_hist, val_loss_hist)\n",
     "utils.plot_accuracy_epoch(val_acc_hist, train_acc_hist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac0e337c",
+   "metadata": {},
+   "source": [
+    "The ConvLSTM performed very well. After 20 epochs we achieve 88% accuracy. This is intuitive. Due to the spacial features used in our recurrent blocks, the network appears to be superior in differentiating sequential visual data. We also note, that now our accuracy and loss curves look more ordinary now. Looking at the loss curves we observe however that our network has not entirely converged yet. Some more epochs would have probably ameliorated our performance. Additionally, we also begin to see that our network starts to overfit at the later epochs. This leads us to believe that some transforms or dropout might be helpful in mitigating overfitting, especially when adding more epochs."
    ]
   },
   {
