--- a/Assignment4/Lab_Recurrent_4.ipynb
+++ b/Assignment4/Lab_Recurrent_4.ipynb
@@ -1536,14 +1536,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c55017d9",
-   "metadata": {},
-   "source": [
-    "For our self-implemented LSTM we observe very similar behavior as above. This is expected considering it is the same neural network building block. Small changes might be attributed to the different initializations of the inner weights. The experiment documentation above applies to our own lstm as well."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 74,
    "id": "1e88f825-bcf9-4c9b-9b09-90c0781571d1",
@@ -2246,6 +2238,14 @@
    "source": [
     "utils.plot_loss_epoch(train_loss_hist, val_loss_hist)\n",
     "utils.plot_accuracy_epoch(val_acc_hist, train_acc_hist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "428aa19a",
+   "metadata": {},
+   "source": [
+    "For our self-implemented LSTM we observe very similar behavior as above. This is expected considering it is the same neural network building block. Small changes might be attributed to the different initializations of the inner weights. The experiment documentation above applies to our own lstm as well. We also note that the training time is longer. This is expected due to us not parallelizing the LSTM gates for instance. The pytorch implementation is in general more optimized."
    ]
   },
   {
